--- a/hypothesis/branching.tex
+++ b/hypothesis/branching.tex
@@ -3,7 +3,7 @@ Unlike CPU cores, GPUs offer no branch prediction nor speculative execution.
 When a multiprocessor is given one or more thread blocks to execute, it partitions them into warps (32 parallel threads), and these execute one common instruction at a time.
 Threads can diverge at branch statements, however, and the warp will serially execute each branch path taken for all threads (disabling execution per-thread as appropriate); The threads converge when the paths complete \cite{cuda_guide}. This will kill the performance of the GPU if many threads within a warp diverge.
 
-A major source of branching in the smoothing algorithm arises due to different vertices having different numbers of neighbours. The three main loops (calculating worst coords, calculating the new worst coords, and assembling matrices $A$ \& $q$) all revolve around iterating over a vertex's neighbours, and thus each warp will end up executing the loop `the maximum degree' times.
+A major source of branching in the smoothing algorithm arises due to different vertices having different numbers of neighbours. The three main loops (calculating worst coords, calculating the new worst coords, and assembling matrices $A$ \& $q$) all revolve around iterating over a vertex's neighbours, and thus each warp will end up executing the loop `\emph{the maximum degree}' times.
 
 We will therefore investigate the following:
 \begin{itemize}
