--- a/hypothesis/hypothesis.tex
+++ b/hypothesis/hypothesis.tex
@@ -2,7 +2,7 @@
 Our hypothesis is that parallelising our code through colouring and running each colour on the GPU simultaneously will provide a massive performance increase.
 
 
-GPGPU is `the utilisation of a graphics processing unit (GPU), which typically handles computation only for computer graphics, to perform computation in applications traditionally handled by the central processing unit (CPU)' \cite{gpgpu}.
+GPGPU is `\emph{the utilisation of a graphics processing unit (GPU), which typically handles computation only for computer graphics, to perform computation in applications traditionally handled by the central processing unit (CPU)}' \cite{gpgpu}.
 GPU's are ideal for the smoothing algorithm that we have been provided with since although they can only process independent vertices and fragments they can process many of them in parallel and achieve SIMD performance. The transistors of a GPU are devoted to data processing(mainly integer and floating point)\cite{lec7}.
 Although GPUs can only process independent vertices and fragments they are ideal for the smoothing algorithm since they can process many of them in parallel and achieve a high performance by SIMT. The transistors of a GPU are devoted to data processing (mainly integer and floating point) which again makes it a good choice for this investigation\cite{lec7}.
 
@@ -15,7 +15,7 @@ The CUDA Toolkit provides a comprehensive development environment and allows for
 \input{hypothesis/coloring}
 \input{hypothesis/migration}
 
-It is however, not enough to stop at just running the code on our GPU. We must also then optimise for the GPU to achieve maximum performance. Therefore we propose the following.
+It is however, not enough to stop at just running the code on our GPU. We must also then optimise for the GPU to achieve maximum performance. Therefore we make a number of proposals in the following subsections.
 
 \input{hypothesis/branching}
 \input{hypothesis/pinning}
