--- a/misc/settings.tex
+++ b/misc/settings.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%% SETTINGS %%%%%%%%%%%
 \title{The ``Smooth'' challenge}
 
-\author{Sarah Tattersall, Jack Stevenson, Wael Aljeshi}
+\author{Sarah Tattersall, Jack Stevenson, Wael Al Jishi}
 
 \date{\today}
