--- a/hypothesis/migration.tex
+++ b/hypothesis/migration.tex
@@ -32,7 +32,7 @@ Finally we must adapt the smoothing algorithm for the GPU in a number of steps:
   \item \textbf{Modify mesh methods for running on the GPU}. \\
         Since we cannot copy the mesh object directly from the CPU to GPU will not have the ability to call the mesh object's methods, such as \verb!mesh->isCornerNode(vid);!. All methods needed by the smoothing algorithm must be declared as \verb!__device__! methods and re-written.
   \item \textbf{Use constant memory}\\
-        We will store our device data in constant memory on the GPU. The reason behind this is that Nvidia hardware can broadcast a single memory read to each half warp so if threads in a half warp request data from the same address then the GPU will only generate one load request\cite{const_mem}. It does this by splitting each half warp into as many separate requests as there are different memory addresses in the initial request, decreasing throughput by a factor equal to the number of separate requests\cite{half_warp_broadcast}. This will save a lot of traffic compared to global memory.
+        We will store our device data in constant memory on the GPU. The reason behind this is that Nvidia hardware can broadcast a single memory read to each half warp so if threads in a half warp request data from the same address then the GPU will only generate one load request~\cite{const_mem}. It does this by splitting each half warp into as many separate requests as there are different memory addresses in the initial request, decreasing throughput by a factor equal to the number of separate requests~\cite{half_warp_broadcast}. This will save a lot of traffic compared to global memory.
         Furthermore constant data is cached on the GPU so if the other half warp also needs the data it can retrieve it directly from the cache rather than the memory.
 
 \end{itemize}
