--- a/introduction/background.tex
+++ b/introduction/background.tex
@@ -1,4 +1,4 @@
-We have been provided with a piece of code that concerns a computational kernel extracted from a research project at Imperial College London on dynamic mesh adaptation\cite{pragmatic}.
+We have been provided with a piece of code that concerns a computational kernel extracted from a research project at Imperial College London on dynamic mesh adaptation~\cite{pragmatic}.
 The aim of this series of experiments is to figure out how to run this program as fast as possible on a given architecture.
 
 We have been given access to the HPC's PC cluster to run the results of our experiment on.
