--- a/hypothesis/hypothesis.tex
+++ b/hypothesis/hypothesis.tex
@@ -3,8 +3,8 @@ Our hypothesis is that parallelising our code through colouring and running each
 
 
 GPGPU is `\emph{the utilisation of a graphics processing unit (GPU), which typically handles computation only for computer graphics, to perform computation in applications traditionally handled by the central processing unit (CPU)}' \cite{gpgpu}.
-GPU's are ideal for the smoothing algorithm that we have been provided with since although they can only process independent vertices and fragments they can process many of them in parallel and achieve SIMD performance. The transistors of a GPU are devoted to data processing(mainly integer and floating point)\cite{lec7}.
-Although GPUs can only process independent vertices and fragments they are ideal for the smoothing algorithm since they can process many of them in parallel and achieve a high performance by SIMT. The transistors of a GPU are devoted to data processing (mainly integer and floating point) which again makes it a good choice for this investigation\cite{lec7}.
+GPU's are ideal for the smoothing algorithm that we have been provided with since although they can only process independent vertices and fragments they can process many of them in parallel and achieve SIMD performance. The transistors of a GPU are devoted to data processing(mainly integer and floating point)~\cite{lec7}.
+Although GPUs can only process independent vertices and fragments they are ideal for the smoothing algorithm since they can process many of them in parallel and achieve a high performance by SIMT. The transistors of a GPU are devoted to data processing (mainly integer and floating point) which again makes it a good choice for this investigation~\cite{lec7}.
 
 % TODO: WRITE A BIT FROM http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html - hardware impl section
 
