group work + clickable links

--- a/group_work/group_work.tex
+++ b/group_work/group_work.tex
@@ -27,6 +27,7 @@
     \item Contributed to implementing batch data transfer from host to device.
     \item Wrote useful bash and Python scripts for running experiments and interfacing with the database.
     \item Debugged bugs related to memory access and transfer.
+    \item Explored instruction level optimisation such as strength reduction and use of restricted pointers.
   \end{itemize} \\
   \hline
 \end{tabular}
