--- a/misc/packages.tex
+++ b/misc/packages.tex
@@ -15,3 +15,12 @@
 \usepackage{listings}
 % For math mode
 \usepackage{amsmath}
+% Allows us to click on links and references
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
