tidied margins of bullet points in table

--- a/group_work/group_work.tex
+++ b/group_work/group_work.tex
@@ -5,7 +5,7 @@
   \hline
   \hline
   % Sarah
-  \begin{itemize}
+  \begin{itemize}[leftmargin=0.3cm]
     \item Wrote colouring and reordering algorithms.
     \item Contributed to porting the code to the GPU using CUDA.
     \item Implemented the removal of corner nodes.
@@ -14,7 +14,7 @@
   \end{itemize} &
 
   %Jack
-  \begin{itemize}
+  \begin{itemize}[leftmargin=0.3cm]
     \item Contributed to porting the code to the GPU using CUDA.
     \item Implemented finding the threads per block sweet spot.
     \item Contributed to implementing batch data transfer from host to device.
@@ -22,7 +22,7 @@
   \end{itemize} &
 
   % Wael
-  \begin{itemize}
+  \begin{itemize}[leftmargin=0.3cm]
     \item Implemented a SQLite 3 database for result storage.
     \item Contributed to implementing batch data transfer from host to device.
     \item Wrote useful bash and Python scripts for running experiments and interfacing with the database.
